03-service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mydb-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 3306
      port: 3306
 #     nodePort: 30008
  selector:
    env: production-db
