03-service-php.yaml
apiVersion: v1
kind: Service
metadata:
  name: myphp-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
    env: production-frontend
