03-ingress-apache-php.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "apache"
    apache.org/mod-proxy-balancer: "true"
    apache.org/mod-proxy-balancer-path: "/"
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myphp-service
            port:
              name: http
