03-ingress-traefik-php.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - host: mon-app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myphp-service
                port:
                  number: 80
